demo-environment/gitops-aks-state/APIM-gw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azurestackgw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azurestackgw
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: azurestackgw
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: azurestackgw
        image: mcr.microsoft.com/azure-api-management/gateway:latest
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8081
        readinessProbe:
          httpGet:
            path: /internal-status-0123456789abcdef
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 3
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: azurestackgw
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: apigw
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8081
  selector:
    app: azurestackgw
