demo-environment/gitops-aks-state/open-telemetry-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-app1
  labels:
    app: opentelemetry-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: opentelemetry-app1
  template:
    metadata:
      labels:
        app: opentelemetry-app1
    spec:
      containers:
        - name: opentelemetry-app1
          image: tkubica/opentelemetry:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
                cpu: 10m
                memory: 16M
            limits:
                cpu: 100M
                memory: 128M
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-app2
  labels:
    app: opentelemetry-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: opentelemetry-app2
  template:
    metadata:
      labels:
        app: opentelemetry-app2
    spec:
      containers:
        - name: opentelemetry-app2
          image: tkubica/opentelemetry:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
                cpu: 10m
                memory: 16M
            limits:
                cpu: 100M
                memory: 128M
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-tfgen
  labels:
    app: opentelemetry-tfgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentelemetry-tfgen
  template:
    metadata:
      labels:
        app: opentelemetry-tfgen
    spec:
      containers:
        - name: opentelemetry-tfgen
          image: tkubica/opentelemetry-tfgen:latest
          resources:
            requests:
                cpu: 10m
                memory: 16M
            limits:
                cpu: 100M
                memory: 128M
---
kind: Service
apiVersion: v1
metadata:
  name: opentelemetry-app1
  labels:
    app: opentelemetry-app1
spec:
  selector:
    app: opentelemetry-app1
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: opentelemetry-app2
  labels:
    app: opentelemetry-app2
spec:
  selector:
    app: opentelemetry-app2
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 8080
